amyc/src/test/resources/amyc/parser/failing/ValInVal.amy
object Val
  val x: Int(32) = val y: Int = 10; 5; 42
end Val
